<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <GVL Name="gHMI" Id="{e027e335-39c7-4ca5-9ca8-66eb092a49c3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	AxisHMI_1: ST_HMI_Axis;
	bMoveRel : BOOL;
	bMoveAbs : BOOL;
	bMoveVel : BOOL;
	bMoveVel2 : BOOL;
	bStop : BOOL;
	vel 	: LREAL:=360;
	vel2 	: LREAL:=720;
	pos		: LREAL;
	targetAngle : LREAL;
	bias : LREAL;
	bSetHome : BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>